# defa-stock-management

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
defa/: asgi.py  settings.py  urls.py  wsgi.py
defa/static/css/: admin.css  style.css
defa/static/js/: pgc.js  stock.js
defa/templates/: base.html  index.html
defa/templates/admin/: base_site.html
defa/templates/pgc/: pgc.html
defa/templates/stock/: category.html  stock.html
pgc/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
pgc/management/commands/: Teste.csv  upload_pgc_list.py
pgc/migrations/: 0001_initial.py  0002_pgcitem_is_opened.py  0003_auto_20200408_1623.py  0004_auto_20200408_1631.py
staticfiles/: staticfiles.json
staticfiles/css/: style.71c275c384e6.css
stock/: admin.py  forms.py  models.py  urls.py  views.py
stock/migrations/: 0001_initial.py  0002_auto_20200311_0913.py
withdrawal/: admin.py  models.py
withdrawal/migrations/: 0001_initial.py  0002_auto_20200408_1501.py
