[tool.poetry]
name = "defa"
version = "0.1.0"
description = ""
authors = ["ThiagoDiasV <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.1"
ipython = "^7.13.0"
pylama = "^7.7.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
