[tool.poetry]
name = "defa"
version = "0.1.0"
description = ""
authors = ["ThiagoDiasV <thiago76ers@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.6"
psycopg2 = "^2.8.4"
django-widget-tweaks = "^1.4.5"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
python-dotenv = "^0.12.0"
psycopg2-binary = "^2.8.4"
whitenoise = "^5.0.1"
python-decouple = "^3.3"
dj-static = "^0.0.6"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.1"
ipython = "^7.13.0"
pylama = "^7.7.1"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
